event26 update + fix links

--- a/src/content/event/build2learn-26.mdx
+++ b/src/content/event/build2learn-26.mdx
@@ -4,11 +4,11 @@ description: 'Join us for an exciting hackathon where innovation meets community
 eventDate: '2025-04-19'
 eventTime: '9:00 AM - 2:00 PM'
 registrationDeadline: '2025-04-17'
-heroImage: '/blog-placeholder-3.jpg'
+heroImage: '/build2learn-26.png'
 registration_link: 'https://docs.google.com/forms/u/0/d/e/1FAIpQLSdrpl_HFCw1v9uWh9U2U6rt-p6O-hzfe2hKPyjnj7AscQoXBg/closedform'
-venue: 'TBD'
-venue_address: 'TBD'
-venue_location: 'https://maps.app.goo.gl/b8EeisZGsd1VDcGn6'
+venue: 'Freshworks'
+venue_address: 'SP infocity(Global Infocity Park), Perungudi'
+venue_location: 'https://maps.app.goo.gl/5vQwJwrrKqYuz3fz7'
 maxParticipants: 50
 ---
 
