blog ul ol style fix

--- a/src/content/blog/build-to-learn-everything-you-wanted-to-know.mdx
+++ b/src/content/blog/build-to-learn-everything-you-wanted-to-know.mdx
@@ -35,7 +35,7 @@ Sometimes people are just curious about Build to Learn events. They come to see 
 ## Typical Flow of an Event
 A typically Build to Learn event runs from 3 to 4 hours.
 
-- Welcome and Introductions – The organizers welcome the group. Participants introduce themselves and describe their project idea or their learning goals. 
-- After introductions, we form small teams and start working on building their product prototypes.
-- During the event, volunteers/experts go around helping teams.
-- We normally end with discussions/demos and group photos.
+1. Welcome and Introductions – The organizers welcome the group. Participants introduce themselves and describe their project idea or their learning goals. 
+2. After introductions, we form small teams and start working on building their product prototypes.
+3. During the event, volunteers/experts go around helping teams.
+4. We normally end with discussions/demos and group photos.
