fix: linting issues

--- a/src/content/blog/build2learn-for-womens-coding-club-at-kcg.mdx
+++ b/src/content/blog/build2learn-for-womens-coding-club-at-kcg.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Build2learn for women’s coding club at KCG"
+title: 'Build2learn for women’s coding club at KCG'
 description: 'Instructions to submit your project to display in build2learn project showcase.'
 pubDate: 'Jul 18 2018'
 heroImage: '/images/blog/IMG_20180714_151836.jpg'
@@ -7,11 +7,11 @@ tags: ['build2learn']
 authors: ['bhavani']
 ---
 
-Last quarter, we held orientation programs for women’s coding club at KCG college of technology and Hindustan University. This semester KCG wanted to start off with a build2learn session for their Women’s coding club.. We had 57 registrations from different departments which made me super excited because that is the crowd that we get for a    typical build2learn session. I could sense a bit of tension in every girl’s face as they entered the seminar hall as this is something new to them.
+Last quarter, we held orientation programs for women’s coding club at KCG college of technology and Hindustan University. This semester KCG wanted to start off with a build2learn session for their Women’s coding club.. We had 57 registrations from different departments which made me super excited because that is the crowd that we get for a typical build2learn session. I could sense a bit of tension in every girl’s face as they entered the seminar hall as this is something new to them.
 
 For any B2L event, two things could go wrong. Since it is an event where you code and build software you need a laptop and a workspace set up with comfortable tables & chairs. The b2l team landed up at KCG, and we had both the issues.
 
-I started the event with an introduction B2L and why is it important to do woman only events. After this, we split them into teams based on their interest –  learning python, Web apps, Android apps and ML apps.
+I started the event with an introduction B2L and why is it important to do woman only events. After this, we split them into teams based on their interest – learning python, Web apps, Android apps and ML apps.
 
 Ashish started off the Android team with AppInventor since they are just in their 2nd year and far from learning Java or Kotlin.
 
@@ -21,7 +21,7 @@ The python crowd was large, and we needed an extra hand, so we converted a KCG s
 
 As I got the Python team up and running with Shruthi, I checked on the Web application team, and there comes my biggest shock. The bunch of girls who enthusiastically said they wanted to build web apps posted me with a question – “What is a web app?”. I found that none of them were from CSE background and had no exposure to programming languages other than C. I explained to them how the web app works with Gmail login as an example. Now they were super curious to build one and asked me where to start, and I pointed them to Python.
 
-By this time the Python team got their Pycharm edu version up and running. I recognized a couple of girls from the club orientation session where they used python turtle to draw shapes and houses. I wanted to reconnect with them to see how far they had come from the orientation session. As I neared them, I found that the group was confused with few prints and variable initialization on the screen. Before I could ask them what’s wrong, one girl went like. “Akka why are we doing this and why aren’t we drawing like the last time?”. I explained to them that the intention of Python turtle session was for them to learn python the fun way. For them to build their application, they need to code those functionalities and Python is a similar to Java, C, and other programming languages.  With a glow and a broad smile, she said: “Ohhhh I thought python was just to draw stuff.” I spent some more time with them explaining all the things they can build with Python.
+By this time the Python team got their Pycharm edu version up and running. I recognized a couple of girls from the club orientation session where they used python turtle to draw shapes and houses. I wanted to reconnect with them to see how far they had come from the orientation session. As I neared them, I found that the group was confused with few prints and variable initialization on the screen. Before I could ask them what’s wrong, one girl went like. “Akka why are we doing this and why aren’t we drawing like the last time?”. I explained to them that the intention of Python turtle session was for them to learn python the fun way. For them to build their application, they need to code those functionalities and Python is a similar to Java, C, and other programming languages. With a glow and a broad smile, she said: “Ohhhh I thought python was just to draw stuff.” I spent some more time with them explaining all the things they can build with Python.
 
 There was another girl who missed the orientation session and wanted to know what everybody else was talking about. I gave her the demo of python turtle. She was asking me questions like “Do they use it to design posters? Is this what controls MS paint? etc.,” trying to fit in with a real-time application.
 
