--- a/src/content/event/build2learn-26.mdx
+++ b/src/content/event/build2learn-26.mdx
@@ -4,7 +4,7 @@ description: 'Join us for an exciting hackathon where innovation meets community
 eventDate: '2025-04-19'
 eventTime: '9:00 AM - 2:00 PM'
 registrationDeadline: '2025-04-17'
-heroImage: ''
+heroImage: '/images/about_us_hero.webp'
 registration_link: 'https://docs.google.com/forms/d/e/1FAIpQLSeIquUO7lBZt1Ca6B0FNOhLj5Z4P764gHfdFQUWXqt1B-FaiA/viewform'
 venue: 'Freshworks'
 venue_address: 'SP infocity(Global Infocity Park), Perungudi'
