fix: updated the description in blogs for better seo

--- a/src/content/blog/build-to-learn-everything-you-wanted-to-know.mdx
+++ b/src/content/blog/build-to-learn-everything-you-wanted-to-know.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Build to Learn – Everything You Wanted to Know'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'User guide to Build2Learn'
 pubDate: 'Jun 27 2018'
 heroImage: '/images/blog/Screenshot-2020-12-17-at-8.54.48-AM.png'
 tags: ['build2learn']
