--- a/src/content/blog/build2learn-5th-dec-2020.mdx
+++ b/src/content/blog/build2learn-5th-dec-2020.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Build2Learn – 5th Dec 2020'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'Comeback of build2learn after lockdown'
 pubDate: 'Dec 17 2020'
 heroImage: '/images/blog/IMG_20181013_104730.jpg'
 tags: ['build2learn']
