--- a/src/content/blog/build2learn-at-kcg-college.mdx
+++ b/src/content/blog/build2learn-at-kcg-college.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Build2Learn at KCG College'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'Students at KCG leveraging their skills to build apps at Build2Learn'
 pubDate: 'Feb 15 2021'
 heroImage: '/images/blog/Screenshot-2021-02-07-at-9.15.43-PM-min-2048x1199.png'
 tags: ['build2learn']
