--- a/src/content/blog/build2learn-for-womens-coding-club-at-kcg.mdx
+++ b/src/content/blog/build2learn-for-womens-coding-club-at-kcg.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Build2learn for women’s coding club at KCG'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'Build2Learn at women’s coding club orientation in LCG'
 pubDate: 'Jul 18 2018'
 heroImage: '/images/blog/IMG_20180714_151836.jpg'
 tags: ['build2learn']
