--- a/src/content/blog/my-experience-at-mlh-local-hack-day-bhuvana-ka.mdx
+++ b/src/content/blog/my-experience-at-mlh-local-hack-day-bhuvana-ka.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'My experience at MLH — Local Hack Day – Bhuvana KA'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'Experience of building micro-products at MLH — Local Hack Day'
 pubDate: 'Dec 17 2020'
 heroImage: '/images/blog/1_srVlKXjp9x1BxigVqxvApw.jpeg'
 tags: ['build2learn']
