--- a/src/content/blog/notes-from-build-to-learn-session-10.mdx
+++ b/src/content/blog/notes-from-build-to-learn-session-10.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Notes from Build to Learn Session 10'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'MoM of build2Learn'
 pubDate: 'Jul 1 2018'
 heroImage: '/images/blog/IMG_20180630_140144-1400x700.jpg'
 tags: ['build2learn']
