--- a/src/content/blog/rebirth-of-build2learn.mdx
+++ b/src/content/blog/rebirth-of-build2learn.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Build2Learn with a new Spin'
-description: 'Instructions to submit your project to display in build2learn project showcase.'
+description: 'Rebirth of Build2Learn, but with a twist!'
 pubDate: 'Dec 17 2020'
 heroImage: '/images/blog/Screenshot-2020-12-17-at-8.54.48-AM.png'
 tags: ['build2learn']
